--- a/book-network-backend/src/main/resources/application-dev.yml
+++ b/book-network-backend/src/main/resources/application-dev.yml
@@ -32,7 +32,7 @@ spring:
 application:
   security:
     jwt:
-      secret-key: gFWqqKsp
+      secret-key: c59430557d976d689cec95866e669d2381e4cbad158605c4
       expiration: 864000
   mailing:
     frontend:
