--- a/book-network-backend/src/main/resources/application-dev.yml
+++ b/book-network-backend/src/main/resources/application-dev.yml
@@ -38,5 +38,9 @@ application:
     frontend:
       activation-url: http://localhost:4200/activate-account
 
+  file:
+    upload:
+      photos-output-path: ./uploads
+
 server:
   port: 8088
